--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "query-string": "^8.1.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^16.14.0",
     "react-markdown": "^6.0.2",
     "react-router": "^6.14.2",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.11",
